src/test/ui/issues/issue-4XXXX/issue-40000.stderr
error[E0308]: mismatched types
  --> $DIR/issue-40000.rs:6:9
   |
LL |     foo(bar);
   |         ^^^ one type is more general than the other
   |
   = note: expected trait object `dyn for<'r> Fn(&'r i32)`
              found trait object `dyn Fn(&i32)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
